Tag: tags/2017-09-09-01
--------------------
- zd-22: various updates to wire up field_show_custom_thumbnail (BCTV critical bug)

Tag: tags/2017-09-09
--------------------
- zd-64: HTTP ERROR 500 for a highly used series (SPNN critical bug)

Tag: tags/2017-08-06
--------------------
- zd-28: Add Global Config For Sorting Custom Video Lists by Production Date

Tag: tags/2017-07-30
--------------------
- p-188: ReUsing Jumbotron Items, added media browser to jumbotron item image

Tag: tags/2017-07-18
--------------------
- p-217: Webform Blocks Access to Node Edit

Tag: tags/2017-07-16-0
--------------------
- ch-205/p-162: Site Not Rendering Properly in Explorer 11

Tag: tags/2017-07-16
--------------------
- Added "Video Grid" Component + updated "Landing Page" content type

Tag: tags/2017-07-11-02
--------------------
- p-209: Added title alignment fields to cvl and cvl context

Tag: tags/2017-07-11-01
--------------------
- Updated css for show and new view modes

Tag: tags/2017-07-11
--------------------
- Commented out show field bases from cmb_field_bases for now. Conflicts need to be resolved first.

Tag: tags/2017-06-25
--------------------
- updates for show content type code and features

Tag: tags/2017-06-24
--------------------
- added option to sort by production date on latest shows carousel

Tag: tags/2017-06-12
--------------------
- p-188: ReUsing Jumbotron Items, added published field to jumbotron items

Tag: tags/2017-06-11-0
--------------------
- p-186: Homepage Paragraphs—Any Paragraph

Tag: tags/2017-06-11
--------------------
- p-139: Updated jumbotron to include a toggle for display of CTA button

Tag: tags/2017-05-31
--------------------
- updated cmb_cb_shows_in_series to use proper wrapper code for getting show thumbnail
- added new font icons for skype and google plus
- moved image style for cmb_blog_jumbotron to cmb_blog module

Tag: tags/2017-05-24
--------------------
- p-155: Extra white space on sidebar

Tag: tags/2017-05-21